[package]
authors = ["vyfor"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
description = "Yandex Music for the terminal"
edition = "2021"
keywords = ["yandex", "music", "tui", "cli", "audio-player"]
license = "Apache-2.0"
name = "yamusic"
repository = "https://github.com/vyfor/yamusic"
version = "0.0.1"

[dependencies]
